fix: overflow glitch on input bug

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,11 @@
 
 body {
   font-family: "Source Code Pro", monospace;
-  width: 1120px;
+  max-width: 1120px;
   margin: 2rem auto;
   background-color: #111;
   color: #fff;
+  padding: 0 1rem;
 }
 
 input {
@@ -16,29 +17,28 @@ input {
   color: #fff;
   font-weight: bold;
   width: 100%;
-  caret-color: #00b4d8;
-  caret-shape: block;
+  caret-color: transparent;
 }
 
 /* input:focus {
-  caret-color: #00b4d8;
-} */
+    caret-color: #00b4d8;
+  } */
 
 .caret-block {
   display: inline-block;
   width: 1ch;
   height: 1.2em;
   background: #00b4d8;
-  animation: blink 1.5s linear infinite;
+  animation: blink 1.5s ease-in-out infinite;
   vertical-align: bottom;
 }
 
 @keyframes blink {
   0%,
-  50% {
+  45% {
     opacity: 1;
   }
-  51%,
+  55%,
   100% {
     opacity: 0;
   }
